--- a/Styleguide/styleguide.html
+++ b/Styleguide/styleguide.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Design system example</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
+      href="https://fonts.googleapis.com/css2?family=Exo+2:wght@100&display=swap"
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Oxygen:wght@300;400;700&display=swap"
     />
-    <link rel="stylesheet" href="../styles/style.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="styleguide.css" />
   </head>
   <body>
@@ -20,45 +21,44 @@
             <a href="#colors" class="menu__link">Colors</a>
           </li>
           <li class="menu__item">
-            <a href="#buttons" class="menu__link">Buttons</a>
+            <a href="#Font" class="menu__link">Fonts</a>
           </li>
         </ul>
       </nav>
     </header>
+    <h2 class="color">COLORS</h2>
     <section class="module" id="colors">
       <h2 class="title">Colors</h2>
-      <article class="color --sunlolly">
-        <h3 class="color__title">Sunlolly</h3>
-        <h4 class="color__code">#fff3c7</h4>
+      <article class="color__PrimaryColor">
+        <h3 class="color__title">Primary Color</h3>
+        <h4 class="color__code">#12A0D6</h4>
       </article>
-
-      <article class="color --forestgump">
-        <h3 class="color__title">Forest Gump</h3>
-        <h4 class="color__code">#3d7a5d</h4>
+      <article class="color__ReminderColor">
+        <h3 class="color__title">Reminder Color</h3>
+        <h4 class="color__code">#EA5B0C</h4>
       </article>
-
-      <article class="color --cokenotcola">
-        <h3 class="color__title">Coke Not Cola</h3>
-        <h4 class="color__code">#ffffff</h4>
-      </article>
-
-      <article class="color --cloud9">
-        <h3 class="color__title">Cloud9</h3>
-        <h4 class="color__code">#ece9e4</h4>
-      </article>
-
-      <article class="color --coalasfuck">
-        <h3 class="color__title">Coal As Fuck</h3>
-        <h4 class="color__code">#1c1c1c</h4>
-      </article>
-
-      <article class="color --asshole">
-        <h3 class="color__title">Asshole</h3>
+      <article class="color__TextColor">
+        <h3 class="color__title">Text Color</h3>
         <h4 class="color__code">#000000</h4>
       </article>
+
+      <article class="color__BackgroundColor">
+        <h3 class="color__title">Background Color</h3>
+        <h4 class="color__code">#FFFFFF</h4>
+      </article>
     </section>
-    <section class="module" id="buttons">
-      <h2 class="title">Buttons</h2>
+
+    <h2 class="font">FONTS</h2>
+    <section class="modules" id="fonts">
+      <article class="primary__font">
+        <h3 class="font__title">Primary font</h3>
+        <h4 class="font__name">Exo 2</h4>
+      </article>
+
+      <article class="secondary__font">
+        <h3 class="font__title">Secondary font</h3>
+        <h4 class="font__name">Calibri</h4>
+      </article>
     </section>
   </body>
 </html>
