--- a/homeInfo.html
+++ b/homeInfo.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Exo+2:wght@100&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="home.css" />
+    <link rel="stylesheet" href="homeInfo.css" />
     <title>Document</title>
   </head>
   <body class="home__body">
@@ -42,10 +42,9 @@
     <img class="home__mascot" src="img/mascot.png" alt="maskot" />
     <h2 class="home__text">Pakker</h2>
     <section class="home__packages">
-      <a href="homeInfo.html"
-        ><img class="home__package" src="img/pakke.png" alt="pakke"
+      <a href="home.html"
+        ><img class="home__package" src="img/Pakkeinfo.png" alt="info"
       /></a>
-      <img class="home__package" src="img/pakke.png" alt="pakke" />
       <img class="home__package" src="img/pakke.png" alt="pakke" />
     </section>
     <script src="home.js"></script>
