--- a/arrived.html
+++ b/arrived.html
@@ -22,5 +22,7 @@
       <input class="arrived__box" type="checkbox" />
       <span class="slider round"> Åben låge</span>
     </label>
+
+    <script src="arrived.js"></script>
   </body>
 </html>
