--- a/homeInfo.html
+++ b/homeInfo.html
@@ -47,6 +47,6 @@
       /></a>
       <img class="home__package" src="img/pakke.png" alt="pakke" />
     </section>
-    <script src="home.js"></script>
+    <script src="menu.js"></script>
   </body>
 </html>
