--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
       <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
         >&#9776;</span
       >
-      <div id="mySidenav" class="sidenav">
+      <section id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
           >&times;</a
         >
@@ -33,7 +33,7 @@
         <a href="#">Historik</a>
         <img class="home__icon" src="img/phone.png" alt="phoneIcon" />
         <a href="#">Kundeservice</a>
-      </div>
+      </section>
 
       <img class="logout" src="img/logout.png" alt="log af" />
     </header>
@@ -48,6 +48,6 @@
       <img class="home__package" src="img/pakke.png" alt="pakke" />
       <img class="home__package" src="img/pakke.png" alt="pakke" />
     </section>
-    <script src="home.js"></script>
+    <script src="menu.js"></script>
   </body>
 </html>
