--- a/returnNo.html
+++ b/returnNo.html
@@ -36,9 +36,12 @@
     <section class="return__returnering">
       <h1 class="return__text">Returnering</h1>
       <section class="return__btns">
-        <button class="return__btn">
-          <img src="img/scan.png" alt="icon" />
-        </button>
+        <a href="return.html"
+          ><button class="return__btn">
+            ¨
+            <img src="img/scan.png" alt="icon" />
+          </button>
+        </a>
         <button class="return__Nobtn">123</button>
       </section>
     </section>
