--- a/returnNo.html
+++ b/returnNo.html
@@ -37,12 +37,12 @@
       <h1 class="return__text">Returnering</h1>
       <section class="return__btns">
         <a href="return.html"
-          ><button class="return__btn">
+          ><button class="returnNo__btn">
             ¨
-            <img src="img/scan.png" alt="icon" />
+            <img class="returnNo__btnImg" src="img/scan.png" alt="icon" />
           </button>
         </a>
-        <button class="return__Nobtn">123</button>
+        <button class="returnNo__Nobtn">123</button>
       </section>
     </section>
 
