--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Exo+2:wght@100&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="home.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body class="home__body">
