--- a/historic.html
+++ b/historic.html
@@ -11,9 +11,25 @@
 
     <article class="historic__box">
       <p class="historic__text">SwipeBox har leveret din pakke</p>
-      <h3 class="historic__number">pakkenr: Sb16207224779</h3>
+      <h3 class="historic__number">pakkenr: Sb13207224779</h3>
       <h2 class="historic__expiration">udløber om om 14 dage</h2>
       <img class="historic__box" src="img/packageBtn.png" alt="btn" />
+      <img class="newBtn" src="img/new.png" alt="newbtn" />
+    </article>
+    <article class="historic__box">
+      <p class="historic__text">Pakken afleveret af swipeBox</p>
+      <h3 class="historic__number">pakkenr: Sb15207224779</h3>
+      <h3>Afhentet den: 12-05-2021</h3>
+    </article>
+    <article class="historic__box">
+      <p class="historic__text">Pakken afleveret af swipeBox</p>
+      <h3 class="historic__number">pakkenr: Sb19207126079</h3>
+      <h3>Afhentet den: 04-04-2021</h3>
+    </article>
+    <article class="historic__box">
+      <p class="historic__text">Pakken afleveret af swipeBox</p>
+      <h3 class="historic__number">pakkenr: Sb16207224239</h3>
+      <h3>Afhentet den: 04-07-2020</h3>
     </article>
   </body>
 </html>
