start of verificeringskode

--- a/Verificeringskode.html
+++ b/Verificeringskode.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Verificeringkode</title>
+    <link rel="stylesheet" href="Verificeringskode.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@100&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="verificeringskode">
     
-<img src="img/nærboks_logo.png" alt="Logo">
+<img class="logo" src="img/nærboks_logo.png" alt="Logo">
 
-<section>
-    <p>Skriv verificeringskoden du har modtaget på</p>
-    <p>+45 212966XX</p>
-    <p>Tilsend verificeringkode igen</p>
-    <img src="img/Tilsend-verificeringskode-igen.png" alt="">
+<section class="verificeringssection">
+    <p class="verificeringskode">Skriv verificeringskoden du har modtaget på</p>
+    <p class="telefonnummer">+45 212966XX</p>
+    <p class="tilsendkode">Tilsend verificeringkode igen</p>
+    <img class="pil" src="img/Tilsend-verificeringskode-igen.png" alt="">
 </section>
 
 
-<h3>Fortsæt</h3>
+<h3 class="fortsæt">Fortsæt</h3>
 
 </body>
 </html>
