--- a/historic.html
+++ b/historic.html
@@ -34,19 +34,20 @@
       <a href="#">Kundeservice</a>
     </section>
 
-    <section class="package__infoJs"></section>
     <h1 class="historic__title">Mine afhentninger</h1>
 
     <article class="historic__box">
       <p class="historic__text">SwipeBox har leveret din pakke</p>
       <p class="historic__number">Pakkenr: Sb13207224779</p>
+
       <img class="historic__img" src="img/packageBtn.png" alt="btn" />
+
       <h2 class="historic__expiration">Udløber om om 14 dage</h2>
       <img class="historic__new" src="img/new.png" alt="new" />
-      <section class="package__infoJs">
-        <h4>Vis vej</h4>
-        <img src="img/Iconlocation.png" alt="location" />
-        <img src="img/Guide.png" alt="line" />
+      <section class="package__infoJs displayNone">
+        <h4 class="package__showway">Vis vej</h4>
+        <img class="locationIcon" src="img/Iconlocation.png" alt="location" />
+        <img class="gudieline" src="img/Guide.png" alt="line" />
         <h4 class="package__guideText">Ellegårdvej 7, Sønderborg 6400</h4>
         <h4 class="package__guideText">Gå helt hen til den grå nærboks</h4>
         <h4 class="package__guideText">
