verificering done pt 2

--- a/Verificeringskode.html
+++ b/Verificeringskode.html
@@ -14,7 +14,7 @@
 
 <section class="verificeringssection">
     <p class="verificeringskode">Skriv verificeringskoden du har modtaget på</p>
-    <p class="telefonnummer">+45 212966XX</p>
+    <p class="telefonnummer1">+45 212966XX</p>
     <section>
         <article class="inputcontainer">
             <input type="tel" class="input" placeholder="_" id="first-input" value="" maxlength="1">
