start of lågenlukkes

--- a/lågelukkes.html
+++ b/lågelukkes.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="lågelukkes.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@100&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="lågelukkes">
     
-<h1>Husk at lukke lågen</h1>
+<h1 class="husk">Husk at lukke lågen</h1>
 
-<video src="img/luklåge1.mp4"></video>
+<video loop autoplay muted src="img/luklåge_denrigtige.mp4" width="300"></video>
 
+<label class="swipe">
+    <input class="arrived__box" type="checkbox" />
+    <span class="slider round"> Åben låge</span>
+  </label>
 
 </body>
 </html>
