--- a/lågelukkes.html
+++ b/lågelukkes.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="lågelukkes.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@100&display=swap" rel="stylesheet">
-</head>
-<body class="lågelukkes">
-    
-<h1 class="husk">Husk at lukke lågen</h1>
+    <link rel="stylesheet" href="lågelukkes.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Exo+2:wght@100&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body class="lågelukkes">
+    <h1 class="husk">Husk at lukke lågen</h1>
 
-<video loop autoplay muted src="img/luklåge_denrigtige.mp4" width="300"></video>
+    <video
+      loop
+      autoplay
+      muted
+      src="img/luklåge_denrigtige.mp4"
+      width="300"
+    ></video>
 
-<label class="swipe">
-    <input class="arrived__box" type="checkbox" />
-    <span class="slider round"> Åben låge</span>
-  </label>
+    <label class="swipe">
+      <input class="arrived__box" type="checkbox" />
+      <span class="slider round"> Åben låge</span>
+    </label>
 
-</body>
+    <script src="lågelukkes.js"></script>
+  </body>
 </html>
