--- a/lågelukkes.html
+++ b/lågelukkes.html
@@ -22,7 +22,7 @@
       width="300"
     ></video>
 
-    <label class="swipe">
+    <label class="open__switch">
       <input class="arrived__box" type="checkbox" />
       <span class="slider round"> Åben låge</span>
     </label>
