--- a/homeInfo.html
+++ b/homeInfo.html
@@ -15,25 +15,25 @@
       <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
         >&#9776;</span
       >
-      <div id="mySidenav" class="sidenav">
+      <section id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
           >&times;</a
         >
         <img class="home__icon" src="img/package.png" alt="pakkeIcon" />
-        <a href="#">Hent pakker</a>
+        <a href="home.html">Hent pakker</a>
         <img class="home__iconGuide" src="img/guideline.png" alt="guideIcon" />
-        <a href="#">Guideline</a>
+        <a href="guideline.html">Guideline</a>
         <img class="home__iconReturn" src="img/Return.png" alt="ReturnIcon" />
-        <a href="#">Returnering</a>
+        <a href="return.html">Returnering</a>
         <img
           class="home__iconHistoric"
           src="img/historic.png"
           alt="HistricIcon"
         />
-        <a href="#">Historik</a>
+        <a href="historic.html">Historik</a>
         <img class="home__icon" src="img/phone.png" alt="phoneIcon" />
         <a href="#">Kundeservice</a>
-      </div>
+      </section>
 
       <img class="logout" src="img/logout.png" alt="log af" />
     </header>
