--- a/return.html
+++ b/return.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Exo+2:wght@100&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="Style.css" />
     <title>Document</title>
   </head>
@@ -15,20 +19,21 @@
         >&times;</a
       >
       <img class="home__icon" src="img/package.png" alt="pakkeIcon" />
-      <a href="#">Hent pakker</a>
+      <a href="home.html">Hent pakker</a>
       <img class="home__iconGuide" src="img/guideline.png" alt="guideIcon" />
-      <a href="#">Guideline</a>
+      <a href="guideline.html">Guideline</a>
       <img class="home__iconReturn" src="img/Return.png" alt="ReturnIcon" />
-      <a href="#">Returnering</a>
+      <a href="return.html">Returnering</a>
       <img
         class="home__iconHistoric"
         src="img/historic.png"
         alt="HistricIcon"
       />
-      <a href="#">Historik</a>
+      <a href="historic.html">Historik</a>
       <img class="home__icon" src="img/phone.png" alt="phoneIcon" />
       <a href="#">Kundeservice</a>
     </section>
+
     <section class="return__returnering">
       <h1 class="return__text">Returnering</h1>
       <section class="return__btns">
