--- a/home.html
+++ b/home.html
@@ -20,17 +20,17 @@
           >&times;</a
         >
         <img class="home__icon" src="img/package.png" alt="pakkeIcon" />
-        <a href="#">Hent pakker</a>
+        <a href="home.html">Hent pakker</a>
         <img class="home__iconGuide" src="img/guideline.png" alt="guideIcon" />
-        <a href="#">Guideline</a>
+        <a href="guideline.html">Guideline</a>
         <img class="home__iconReturn" src="img/Return.png" alt="ReturnIcon" />
-        <a href="#">Returnering</a>
+        <a href="return.html">Returnering</a>
         <img
           class="home__iconHistoric"
           src="img/historic.png"
           alt="HistricIcon"
         />
-        <a href="#">Historik</a>
+        <a href="historic.html">Historik</a>
         <img class="home__icon" src="img/phone.png" alt="phoneIcon" />
         <a href="#">Kundeservice</a>
       </section>
@@ -41,13 +41,70 @@
     <h1 class="home__title">Hent pakker</h1>
     <img class="home__mascot" src="img/mascot.png" alt="maskot" />
     <h2 class="home__text">Pakker</h2>
-    <section class="home__packages">
+    <article class="historic__box">
+      <p class="historic__text">SwipeBox har leveret din pakke</p>
+      <p class="historic__number">Pakkenr: Sb13207224779</p>
+
+      <img class="historic__img" src="img/packageBtn.png" alt="btn" />
+
+      <h2 class="historic__expiration">Udløber om om 5 dage</h2>
+      <section class="package__infoJs displayNone">
+        <h4 class="package__showway">Vis vej</h4>
+        <img class="locationIcon" src="img/Iconlocation.png" alt="location" />
+        <img class="gudieline" src="img/Guide.png" alt="line" />
+        <h4 class="package__guideText">Ellegårdvej 7, Sønderborg 6400</h4>
+        <h4 class="package__guideText">Gå helt hen til den grå nærboks</h4>
+        <h4 class="package__guideText">
+          Når du er tæt nok på vil appen give en lyd
+        </h4>
+      </section>
+    </article>
+    <br />
+    <article class="historic__box">
+      <p class="historic__text">SwipeBox har leveret din pakke</p>
+      <p class="historic__number">Pakkenr: Sb12207354979</p>
+
+      <img class="historic__img" src="img/packageBtn.png" alt="btn" />
+
+      <h2 class="historic__expiration">Udløber om om 12 dage</h2>
+      <section class="package__infoJs displayNone">
+        <h4 class="package__showway">Vis vej</h4>
+        <img class="locationIcon" src="img/Iconlocation.png" alt="location" />
+        <img class="gudieline" src="img/Guide.png" alt="line" />
+        <h4 class="package__guideText">Ellegårdvej 7, Sønderborg 6400</h4>
+        <h4 class="package__guideText">Gå helt hen til den grå nærboks</h4>
+        <h4 class="package__guideText">
+          Når du er tæt nok på vil appen give en lyd
+        </h4>
+      </section>
+    </article>
+    <br />
+    <article class="historic__box">
+      <p class="historic__text">SwipeBox har leveret din pakke</p>
+      <p class="historic__number">Pakkenr: Sb09207224674</p>
+
+      <img class="historic__img" src="img/packageBtn.png" alt="btn" />
+
+      <h2 class="historic__expiration">Udløber om om 14 dage</h2>
+      <section class="package__infoJs displayNone">
+        <h4 class="package__showway">Vis vej</h4>
+        <img class="locationIcon" src="img/Iconlocation.png" alt="location" />
+        <img class="gudieline" src="img/Guide.png" alt="line" />
+        <h4 class="package__guideText">Ellegårdvej 7, Sønderborg 6400</h4>
+        <h4 class="package__guideText">Gå helt hen til den grå nærboks</h4>
+        <h4 class="package__guideText">
+          Når du er tæt nok på vil appen give en lyd
+        </h4>
+      </section>
+    </article>
+    <!--  <section class="home__packages">
       <a href="homeInfo.html"
         ><img class="home__package" src="img/pakke.png" alt="pakke"
       /></a>
       <img class="home__package" src="img/pakke.png" alt="pakke" />
       <img class="home__package" src="img/pakke.png" alt="pakke" />
-    </section>
+    </section> -->
+    <script src="historic.js"></script>
     <script src="menu.js"></script>
   </body>
 </html>
