--- a/historic.html
+++ b/historic.html
@@ -19,17 +19,17 @@
         >&times;</a
       >
       <img class="home__icon" src="img/package.png" alt="pakkeIcon" />
-      <a href="#">Hent pakker</a>
+      <a href="home.html">Hent pakker</a>
       <img class="home__iconGuide" src="img/guideline.png" alt="guideIcon" />
-      <a href="#">Guideline</a>
+      <a href="guideline.html">Guideline</a>
       <img class="home__iconReturn" src="img/Return.png" alt="ReturnIcon" />
-      <a href="#">Returnering</a>
+      <a href="return.html">Returnering</a>
       <img
         class="home__iconHistoric"
         src="img/historic.png"
         alt="HistricIcon"
       />
-      <a href="#">Historik</a>
+      <a href="historic.html">Historik</a>
       <img class="home__icon" src="img/phone.png" alt="phoneIcon" />
       <a href="#">Kundeservice</a>
     </section>
