--- a/lågelukkes.html
+++ b/lågelukkes.html
@@ -26,7 +26,7 @@
       <input class="arrived__box" type="checkbox" />
       <span class="slider round"> Åben låge</span>
     </label>
-
+    <script src="arrived.js"></script>
     <script src="lågelukkes.js"></script>
   </body>
 </html>
