--- a/home.html
+++ b/home.html
@@ -35,7 +35,9 @@
         <a href="#">Kundeservice</a>
       </section>
 
-      <img class="logout" src="img/logout.png" alt="log af" />
+      <a href="Registrering.html"
+        ><img class="logout" src="img/logout.png" alt="log af"
+      /></a>
     </header>
 
     <h1 class="home__title">Hent pakker</h1>
