--- a/returnNo.html
+++ b/returnNo.html
@@ -34,6 +34,7 @@
       <a href="#">Kundeservice</a>
     </section>
       <section class="return__btns">
+        <h1 class="return__textnr">Returnering</h1>
         <a href="return.html"
           ><button class="returnNo__btn">
             ¨
@@ -49,7 +50,7 @@
       <input class="returnNo__input" type="text" />
     </label>
     <footer class="returnNo__footer">
-      <button class="returnNo__confirm">Bekræft</button>
+     <a href="home.html"><button class="returnNo__confirm">Bekræft</button></a> 
     </footer>
 
     <script src="menu.js"></script>
