--- a/lågelukkes.html
+++ b/lågelukkes.html
@@ -22,9 +22,9 @@
       width="300"
     ></video>
 
-    <label class="open__switch">
-      <input class="arrived__box" type="checkbox" />
-      <span class="slider round"> Åben låge</span>
+    <label class="swipe_luk">
+      <input class="check" type="checkbox" />
+      <span class="swipe knappen">Har du lukket lågen?</span>
     </label>
     <script src="arrived.js"></script>
     <script src="lågelukkes.js"></script>
