--- a/guideline.html
+++ b/guideline.html
@@ -48,7 +48,7 @@
       <section class="guide__info">
         <h1 class="guide__title">Sådan gør du</h1>
         <p class="guide__text">
-          Du vil få en besked år du har en pakke, her efter skal du gå hen til
+          Du vil få en besked når du har en pakke, her efter skal du gå hen til
           pakkeboksen hvor den automatisk vil finde dig.
         </p>
       </section>
