--- a/guideline.html
+++ b/guideline.html
@@ -38,7 +38,7 @@
       <section class="guide__info">
         <h1 class="guide__title">Sådan gør du</h1>
         <p class="guide__text">
-          Husk at bluetooth skal være slået til. Da den eller ikke vil kunne
+          Husk at Bluetooth skal være slået til, da den ellers ikke vil kunne
           finde pakkeboksen.
         </p>
       </section>
@@ -48,7 +48,7 @@
       <section class="guide__info">
         <h1 class="guide__title">Sådan gør du</h1>
         <p class="guide__text">
-          Du vil få en besked når du har en pakke, her efter skal du gå hen til
+          Du vil få en besked når du har en pakke, herefter skal du gå hen til
           pakkeboksen hvor den automatisk vil finde dig.
         </p>
       </section>
@@ -70,8 +70,8 @@
       <section class="guide__info">
         <h1 class="guide__title">Sådan gør du</h1>
         <p class="guide__text">
-          Swipe og lågen åbner, her efter kan du tage din pakke og nyde resten
-          af dagen.
+          Swipe og lågen åbner, herefter kan du tage din pakke og nyde resten af
+          dagen.
         </p>
       </section>
 
